welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:20: error: not found: value resultat
	return resultat;
               ^