welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {

		var result = false;

	if(equalOk)
	{
		if(a < b && b < c)
		{
			result = true;
		}
	}
	else
	{
		if(a <= b && b <= c)
		{
			result = true;
		}
	}

	return resultat;
	
}
